--- a/source/catalog.html
+++ b/source/catalog.html
@@ -15,7 +15,6 @@
 
 <body class="page__body">
   <header class="main-header header-container">
-
     <a class="main-header__logo logo" href="#">
       <img class="logo__img" src="#" width="33" height="38" alt="Логотип">
       <img class="logo__img" src="#" width="101" height="18" alt="Cat Energy">
@@ -27,7 +26,6 @@
         </li>
         <li class="navigation__item">
           <a class="navigation__link navigation__link--active" href="#">Каталог продукции</a>
-    
         </li>
         <li class="navigation__item">
           <a class="navigation__link" href="#">Подбор программы</a>
@@ -57,12 +55,20 @@
               <img class="catalog-card__image" src="images/chicken-500-mobile@1x.png" srcset="images/chicken-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 500гр">
             </picture>
           </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">500 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Курица</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">700 &#8381;</p>
+          <dl class="catalog-card__options">
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Масса</dt>
+              <dd class="catalog-card__value">500 г</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Вкус</dt>
+              <dd class="catalog-card__value">Курица</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Цена</dt>
+              <dd class="catalog-card__value">700 &#8381;</dd>
+            </div>
+          </dl>
           <a class="catalog-card__link button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog-card">
@@ -76,12 +82,20 @@
               <img class="catalog-card__image" src="images/chicken-1000-mobile@1x.png" srcset="images/chicken-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 1000гр">
             </picture>
           </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">1000 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Курица</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">1000 &#8381;</p>
+          <dl class="catalog-card__options">
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Масса</dt>
+              <dd class="catalog-card__value">1000 г</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Вкус</dt>
+              <dd class="catalog-card__value">Курица</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Цена</dt>
+              <dd class="catalog-card__value">1000 &#8381;</dd>
+            </div>
+          </dl>
           <a class="catalog-card__link button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog-card">
@@ -95,13 +109,21 @@
               <img class="catalog-card__image" src="images/fish-500-mobile@1x.png" srcset="images/fish-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 500гр">
             </picture>
           </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">500 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Рыба</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">700 &#8381;</p>
-          <a class="catalog-card__link button" href="#">Заказать</a>         
+          <dl class="catalog-card__options">
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Масса</dt>
+              <dd class="catalog-card__value">500 г</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Вкус</dt>
+              <dd class="catalog-card__value">Рыба</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Цена</dt>
+              <dd class="catalog-card__value">700 &#8381;</dd>
+            </div>
+          </dl>
+          <a class="catalog-card__link button" href="#">Заказать</a>
         </li>
         <li class="catalog__item catalog-card">
           <a class="catalog-card__link" href="#">
@@ -114,104 +136,26 @@
               <img class="catalog-card__image" src="images/fish-1000-mobile@1x.png" srcset="images/fish-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 1000гр">
             </picture>
           </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">500 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Рыба</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">1000 &#8381;</p>
-          <a class="catalog-card__link button" href="#">Заказать</a>      
-        </li>
-        <li class="catalog__item catalog-card">
-          <a class="catalog-card__link" href="#">
-            <h3 class="catalog-card__title">Cat Energy PRO 500 г</h3>
-          </a>
-          <a class="catalog-card__link" href="#">
-            <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/buckweat-500-desktop@1x.png 1x, images/buckweat-500-desktop@2x.png 2x">
-              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-500-tablet@1x.png 1x, images/buckweat-500-tablet@2x.png 2x">
-              <img class="catalog-card__image" src="images/buckweat-500-mobile@1x.png" srcset="images/buckweat-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 500гр">
-            </picture>
-          </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">500 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Гречка</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">700 &#8381;</p>
-          <a class="catalog-card__link button" href="#">Заказать</a>         
-        </li>
-        <li class="catalog__item catalog-card">
-          <a class="catalog-card__link" href="#">
-            <h3 class="catalog-card__title">Cat Energy PRO 1000 г</h3>
-          </a>
-          <a class="catalog-card__link" href="#">
-            <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/buckweat-1000-desktop@1x.png 1x, images/buckweat-1000-desktop@2x.png 2x">
-              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-1000-tablet@1x.png 1x, images/buckweat-1000-tablet@2x.png 2x">
-              <img class="catalog-card__image" src="images/buckweat-1000-mobile@1x.png" srcset="images/buckweat-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 1000гр">
-            </picture>
-          </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">1000 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Гречка</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">1000 &#8381;</p>
+          <dl class="catalog-card__options">
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Масса</dt>
+              <dd class="catalog-card__value">1000 г</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Вкус</dt>
+              <dd class="catalog-card__value">Рыба</dd>
+            </div>
+            <div class="catalog-card__option">
+              <dt class="catalog-card__key">Цена</dt>
+              <dd class="catalog-card__value">1000 &#8381;</dd>
+            </div>
+          </dl>
           <a class="catalog-card__link button" href="#">Заказать</a>
         </li>
-        <li class="catalog__item catalog-card">
-          <a class="catalog-card__link" href="#">
-            <h3 class="catalog-card__title">Cat Energy PRO 500 г</h3>
-          </a>
-          <a class="catalog-card__link" href="#">
-            <picture>
-              <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/rice-500-desktop@1x.png 1x, images/rice-500-desktop@2x.png 2x">
-              <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/rice-500-tablet@1x.png 1x, images/rice-500-tablet@2x.png 2x">
-              <img class="catalog-card__image" src="images/rice-500-mobile@1x.png" srcset="images/rice-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рис 500гр">
-            </picture>
-          </a>
-          <p class="catalog-card__description">Масса</p>
-          <p class="catalog-card__description">500 г</p>
-          <p class="catalog-card__description">Вкус</p>
-          <p class="catalog-card__description">Рис</p>
-          <p class="catalog-card__description">Цена</p>
-          <p class="catalog-card__description">700 &#8381;</p>
-          <a class="catalog-card__link button" href="#">Заказать</a>
-        </li>
-        <li class="catalog__item catalog-card catalog-card--show-more">
+        <li class="catalog__item catalog-card catalog-card--show-all">
           <h3 class="catalog-card__title">Показать еще 100500 товаров</h3>
           <p class="catalog-card__description">На самом деле вкусов гораздо больше!</p>
           <a class="catalog-card__link button button--show-all" href="#">показать все</a>
-        </li>
-      </ul>
-    </section>
-    <section class="additional-catalog">
-      <h2 class="additional-catalog__title">Дополнительные товары</h2>
-      <ul class="additional-catalog__list">
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">Сахарозаменитель</h3>
-          <p class="additional-card__description">1 упаковка (100 г)</p>
-          <p class="additional-card__description">200 &#8381;</p>
-          <a class="additional-card__link button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">питьевая вода</h3>
-          <p class="additional-card__description">5 литров</p>
-          <p class="additional-card__description">50 &#8381;</p>
-          <a class="additional-card__link button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">молоко</h3>
-          <p class="additional-card__description">1 литр</p>
-          <p class="additional-card__description">100 &#8381;</p>
-          <a class="additional-card__link button" href="#">Заказать</a>
-        </li>
-        <li class="additional-catalog__item additional-card">
-          <h3 class="additional-card__title">витамины</h3>
-          <p class="additional-card__description">1 упаковка (30 г)</p>
-          <p class="additional-card__description">300 &#8381;</p>
-          <a class="additional-card__link button" href="#">Заказать</a>
         </li>
       </ul>
     </section>
@@ -222,7 +166,6 @@
     <section class="subscribe">
       <h2 class="visualy-hidden">Оформите подписку</h2>
       <p class="subscribe__text">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-
       <form class="subscribe__form form" action="https://echo.htmlacademy.ru/" method="post">
         <label for="email">
           <input class="form__input" type="email" id="email" name="email" placeholder="кuklachev@gmail.com" required>
