--- a/source/index.html
+++ b/source/index.html
@@ -42,12 +42,12 @@
   </header>
   <main class="main">
     <section class="promo">
-      <h1 class="promo__title main-title">Функциональное питание для котов</h1>
+      <h1 class="promo__title main-title">Функциональное <br> питание для котов</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
       <picture>
         <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/promo-index-desktop@1x.png 1x, images/promo-index-desktop@2x.png 2x">
         <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/promo-index-tablet@1x.png 1x, images/promo-index-tablet@2x.png 2x">
-        <img class="promo__image" src="images/promo-index-mobile@1x.png" srcset="images/promo-index-mobile@2x.png 2x" width="280" height="270" alt="банка с продуктом Cat Energy">
+        <img class="promo__image" src="images/promo-index-mobile@1x.png" srcset="images/promo-index-mobile@2x.png 2x" width="280" height="270" alt="банка с продуктом Cat Energy" style="background: transparent;">
       </picture>
       <a class="promo__button button" href="#">Подобрать программу</a>
     </section>
@@ -67,8 +67,7 @@
       </ul>
     </section>
     <section class="features">
-      <h2 class="visualy-hidden">Преимущества функционального питания</h2>
-      <p class="features__slogan">Как это работает</p>
+      <h2 class="features__slogan">Как это работает</h2>
       <ol class="features__list">
         <li class="features__item features-card">Функциональное питание
           содержит только полезные питательные вещества.</li>
@@ -117,14 +116,24 @@
     </div>
     <div class="footer__map map">
       <picture>
-
-        <source width="1440" height="400" type="image/jpeg" media="(min-width: 1440px)" srcset="images/map-desktop@1x.jpg 1x, images/map-desktop@2x.jpg 2x">
-        <source width="768" height="400" type="image/jpeg" media="(min-width: 768px)" srcset="images/map-tablet@1x.jpg 1x, images/map-tablet@2x.jpg 2x">
-        <img class="map__image" src="images/map-mobile@1x.jpg" srcset="images/map-tablet@2x.jpg" width="320" height="362" alt="карта как нас найти">
+        <!-- Десктоп (1440px+) -->
+        <source media="(min-width: 1440px)" srcset="
+      images/map-desktop@1x.jpg 1x,
+      images/map-desktop@2x.jpg 2x
+    " type="image/jpeg" width="1440" height="400">
+        <!-- Планшет (768px–1439px) -->
+        <source media="(min-width: 768px)" srcset="
+      images/map-tablet@1x.jpg 1x,
+      images/map-tablet@2x.jpg 2x
+    " type="image/jpeg" width="768" height="400">
+        <!-- Мобильные (до 767px) -->
+        <img class="map__image" src="images/map-mobile@1x.jpg" srcset="
+      images/map-mobile@1x.jpg 1x,
+      images/map-mobile@2x.jpg 2x
+    " width="320" height="362" alt="Карта: как нас найти">
       </picture>
     </div>
     <div class="footer__bottom">
-
       <a class="footer__logo logo" href="#">
         <img class="logo__img" src="#" width="125" height="24" alt="Cat Energy">
       </a>
