fix bg-image mobile

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -159,6 +159,9 @@
         </li>
       </ul>
     </section>
+    <section class="additional-catalog">
+      <h2 class="additional-catalog__title"></h2>
+    </section>
     <section class="actions">
       <h2 class="actions__title">Акции и новинки</h2>
       <p class="actions__description">Закажите все и получите чехол для кота в подарок!</p>
