--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@
       </ul>
     </nav>
     <button class="main-header__menu-button" type="button">
-      <span class="visualy-hidden">Кнопка меню</span>
+      <span class="visualy-hidden">Кнопка вызова меню</span>
       <span></span>
       <span></span>
       <span></span>
