--- a/source/index.html
+++ b/source/index.html
@@ -19,8 +19,8 @@
       <picture>
         <source media="(min-width: 1440px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="images/logo-tablet-header.svg" width="174" height="50" type="image/svg+xml">
-        <img src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-        <img class="logo__img--text" src="images/logo-text.svg" width="101" height="18" alt="Cat Energy">
+        <img class="logo__img" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
+        <img class="logo__img logo__img--text" src="images/logo-text.svg" width="101" height="18" alt="Cat Energy">
       </picture>
     </a>
     <button class="main-header__menu-button" type="button">
