--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,22 +14,21 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header header-container">
+  <header class="main-header no-js header-container">
     <a class="main-header__logo logo" href="index.html">
       <picture>
         <source media="(min-width: 1440px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="images/logo-tablet-header.svg" width="174" height="50" type="image/svg+xml">
         <img class="logo__img" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-        <img class="logo__img logo__img--text" src="images/logo-text.svg" width="101" height="18" alt="Cat Energy">
       </picture>
     </a>
-    <button class="main-header__menu-button" type="button">
+    <button class="main-header__menu-button no-js" type="button">
       <span class="visually-hidden">Кнопка меню</span>
       <span></span>
       <span></span>
       <span></span>
     </button>
-    <nav class="main-header__nav navigation">
+    <nav class="main-header__nav no-js navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
           <a class="navigation__link" href="index.html">Главная</a>
