--- a/source/index.html
+++ b/source/index.html
@@ -14,22 +14,21 @@
 </head>
 
 <body class="page__body">
-  <header class="main-header header-container">
+  <header class="main-header no-js header-container">
     <a class="main-header__logo logo" href="#">
       <picture>
         <source media="(min-width: 1440px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="images/logo-tablet-header.svg" width="174" height="50" type="image/svg+xml">
         <img class="logo__img" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
-        <img class="logo__img logo__img--text" src="images/logo-text.svg" width="101" height="18" alt="Cat Energy">
       </picture>
     </a>
-    <button class="main-header__menu-button" type="button">
+    <button class="main-header__menu-button no-js" type="button">
       <span class="visually-hidden">Кнопка вызова меню</span>
       <span></span>
       <span></span>
       <span></span>
     </button>
-    <nav class="main-header__nav main-header__nav--nojs navigation">
+    <nav class="main-header__nav no-js navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
           <a class="navigation__link navigation__link--active" href="#">Главная</a>
@@ -118,7 +117,7 @@
           <div class="slider__controls">
             <button class="slider__button" type="button">
               <span class="visually-hidden">Сдвиг картинки влево вправо</span>
-              <div class="slider__thumb"></div>
+              <span class="slider__thumb"></span>
             </button>
           </div>
         </div>
@@ -152,7 +151,7 @@
     <div class="footer__bottom">
       <a class="footer__logo logo" href="#">
         <picture>
-          <img src="images/logo-text.svg" width="128" height="24" alt="Логотип Cat Energy.">
+          <img src="images/logo-text.svg" width="128" height="24" alt="Cat Energy">
         </picture>
       </a>
       <ul class="footer__social social">
