--- a/source/index.html
+++ b/source/index.html
@@ -46,12 +46,14 @@
     <section class="promo">
       <h1 class="promo__title main-title main-title--light">Функциональное <br> питание для котов</h1>
       <p class="promo__slogan">Занялся собой? Займись котом!</p>
-      <picture>
-        <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/promo-index-desktop@1x.png 1x, images/promo-index-desktop@2x.png 2x">
-        <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/promo-index-tablet@1x.png 1x, images/promo-index-tablet@2x.png 2x">
-        <img class="promo__image" src="images/promo-index-mobile@1x.png" srcset="images/promo-index-mobile@2x.png 2x" width="280" height="270" alt="банка с продуктом Cat Energy" style="background: transparent;">
-      </picture>
-      <a class="promo__button button" href="#">Подобрать программу</a>
+      <div class="promo__image-container">
+        <picture>
+          <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/promo-index-desktop@1x.png 1x, images/promo-index-desktop@2x.png 2x">
+          <source width="709" height="609" type="image/png" media="(min-width: 768px)" srcset="images/promo-index-tablet@1x.png 1x, images/promo-index-tablet@2x.png 2x">
+          <img class="promo__image" src="images/promo-index-mobile@1x.png" srcset="images/promo-index-mobile@2x.png 2x" width="280" height="270" alt="банка с продуктом Cat Energy" style="background: transparent;">
+        </picture>
+        <a class="promo__button button" href="#">Подобрать программу</a>
+      </div>
     </section>
     <section class="programs">
       <h2 class="visually-hidden">Выбор направления программы</h2>
@@ -85,7 +87,7 @@
               обычной еды на наше функциональное питание.</p>
           </li>
           <li class="features__item features-card">
-            <p class="features-card__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            <p class="features-card__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</p>
           </li>
         </ol>
       </div>
@@ -95,24 +97,28 @@
         <h2 class="example__title">Живой пример</h2>
         <p class="example__main-text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <div class="example__stats stats">
-          <div class="stats__item">
-            <p class="stats__value">5 кг</p>
-            <p class="stats__label">потеря веса</p>
+          <div class="example__stats-wrapper">
+            <div class="stats__item">
+              <div class="stats__value">5 кг</div>
+              <div class="stats__label">снижение веса</div>
+            </div>
+            <div class="stats__item">
+              <div class="stats__value">60 дней</div>
+              <div class="stats__label">затрачено времени</div>
+            </div>
           </div>
-          <div class="stats__item">
-            <p class="stats__value">60 дней</p>
-            <p class="stats__label">затрачено времени</p>
-          </div>
+          <p class="stats__cost">Затраты на питание: 15 000 руб.</p>
         </div>
-        <p class="example__cost">Затраты на питание: 15 000 руб.</p>
+      </div>
+      <div class="slider-container">
         <div class="slider slider-container">
           <picture>
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/fat-cat-tablet@1x.png 1x, images/fat-cat-tablet@2x.png 2x">
-            <img class="slider__image" src="images/fat-саt-mobile@1x.png" srcset="images/fat-саt-mobile@2x.png 2x" width="140" height="256" alt="Фото до: жирненький котик">
+            <img class="slider__image slider__image--left" src="images/fat-саt-mobile@1x.png" srcset="images/fat-саt-mobile@2x.png 2x" width="280" height="256" alt="Фото до: жирненький котик">
           </picture>
           <picture>
             <source width="560" height="512" type="image/png" media="(min-width: 768px)" srcset="images/slim-cat-tablet@1x.png 1x, images/slim-cat-tablet@2x.png 2x">
-            <img class="slider__image" src="images/slim-cat-mobile@1x.png" srcset="images/slim-cat-mobile@2x.png 2x" width="140" height="256" alt="Фото после: стройный котик">
+            <img class="slider__image slider__image--right" src="images/slim-cat-mobile@1x.png" srcset="images/slim-cat-mobile@2x.png 2x" width="280" height="256" alt="Фото после: стройный котик">
           </picture>
           <div class="slider__controls">
             <button class="slider__button" type="button">
@@ -126,8 +132,8 @@
   </main>
   <footer class="footer">
     <div class="footer__contacts contacts">
-      <p class="contacts__invite">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <p class="contacts__invite">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
+      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
     </div>
     <div class="footer__map map">
       <picture>
