--- a/source/catalog.html
+++ b/source/catalog.html
@@ -17,7 +17,7 @@
   <header class="main-header no-js header-container">
     <a class="main-header__logo logo" href="index.html">
       <picture>
-        <source media="(min-width: 1440px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
+        <source media="(min-width: 1330px)" srcset="images/logo-tablet-header.svg" width="202" height="59" type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="images/logo-tablet-header.svg" width="174" height="50" type="image/svg+xml">
         <img class="logo__img" src="images/logo-icon-mobile.svg" width="33" height="38" alt="Логотип Cat Energy.">
       </picture>
@@ -51,7 +51,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/chicken-500-desktop@1x.png 1x, images/chicken-500-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/chicken-500-desktop@1x.png 1x, images/chicken-500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/chicken-500-tablet@1x.png 1x, images/chicken-500-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/chicken-500-mobile@1x.png" srcset="images/chicken-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 500гр">
               </picture>
@@ -80,7 +80,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/chicken-1000-desktop@1x.png 1x, images/chicken-1000-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/chicken-1000-desktop@1x.png 1x, images/chicken-1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/chicken-1000-tablet@1x.png 1x, images/chicken-1000-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/chicken-1000-mobile@1x.png" srcset="images/chicken-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром курица 1000гр">
               </picture>
@@ -109,7 +109,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/fish-500-desktop@1x.png 1x, images/fish-500-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/fish-500-desktop@1x.png 1x, images/fish-500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/fish-500-tablet@1x.png 1x, images/fish-500-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/fish-500-mobile@1x.png" srcset="images/fish-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 500гр">
               </picture>
@@ -138,7 +138,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/fish-1000-desktop@1x.png 1x, images/fish-1000-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/fish-1000-desktop@1x.png 1x, images/fish-1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/fish-1000-tablet@1x.png 1x, images/fish-1000-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/fish-1000-mobile@1x.png" srcset="images/fish-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рыба 1000гр">
               </picture>
@@ -167,7 +167,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/buckweat-500-desktop@1x.png 1x, images/buckweat-500-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/buckweat-500-desktop@1x.png 1x, images/buckweat-500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-500-tablet@1x.png 1x, images/buckweat-500-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/buckweat-500-mobile@1x.png" srcset="images/buckweat-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 500гр">
               </picture>
@@ -196,7 +196,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/buckweat-1000-desktop@1x.png 1x, images/buckweat-1000-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/buckweat-1000-desktop@1x.png 1x, images/buckweat-1000-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/buckweat-1000-tablet@1x.png 1x, images/buckweat-1000-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/buckweat-1000-mobile@1x.png" srcset="images/buckweat-1000-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром гречка 1000гр">
               </picture>
@@ -225,7 +225,7 @@
           <div class="catalog-card__wrapper">
             <a class="catalog-card__link catalog-card__link--image" href="#">
               <picture>
-                <source width="169" height="210" type="image/png" media="(min-width: 1440px)" srcset="images/rice-500-desktop@1x.png 1x, images/rice-500-desktop@2x.png 2x">
+                <source width="169" height="210" type="image/png" media="(min-width: 1330px)" srcset="images/rice-500-desktop@1x.png 1x, images/rice-500-desktop@2x.png 2x">
                 <source width="200" height="210" type="image/png" media="(min-width: 768px)" srcset="images/rice-500-tablet@1x.png 1x, images/rice-500-tablet@2x.png 2x">
                 <img class="catalog-card__image" src="images/rice-500-mobile@1x.png" srcset="images/rice-500-mobile@2x.png 2x" width="140" height="107" alt="Банка с товаром рис 500гр">
               </picture>
@@ -313,48 +313,50 @@
   </main>
 
   <footer class="footer">
-    <div class="footer__contacts contacts footer__contacts--dark">
-      <p class="contacts__invite">Приглашаем к сотрудничеству дилеров!</p>
-      <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-    </div>
-    <div class="footer__map map">
-      <picture>
-        <!-- Десктоп (1440px+) -->
-        <source media="(min-width: 1440px)" srcset="
+    <div class="footer__grid">
+      <div class="footer__contacts contacts">
+        <p class="contacts__invite">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <span>Санкт-Петербург</span></p>
+      </div>
+      <div class="footer__map map">
+        <picture>
+          <!-- Десктоп (1440px+) -->
+          <source media="(min-width: 1330px)" srcset="
       images/map-desktop@1x.jpg 1x,
       images/map-desktop@2x.jpg 2x
     " type="image/jpeg" width="1440" height="400">
-        <!-- Планшет (768px–1439px) -->
-        <source media="(min-width: 768px)" srcset="
+          <!-- Планшет (768px–1439px) -->
+          <source media="(min-width: 768px)" srcset="
       images/map-tablet@1x.jpg 1x,
       images/map-tablet@2x.jpg 2x
     " type="image/jpeg" width="768" height="400">
-        <!-- Мобильные (до 767px) -->
-        <img class="map__image" src="images/map-mobile@1x.jpg" srcset="
+          <!-- Мобильные (до 767px) -->
+          <img class="map__image" src="images/map-mobile@1x.jpg" srcset="
       images/map-mobile@1x.jpg 1x,
       images/map-mobile@2x.jpg 2x
     " width="320" height="362" alt="Карта: как нас найти">
-      </picture>
-    </div>
-    <div class="footer__bottom">
-      <div class="footer__logo logo">
-        <picture>
-          <img src="images/logo-text.svg" width="128" height="24" alt="Логотип Cat Energy.">
         </picture>
       </div>
+    </div>
+    <div class="footer__bottom">
+      <a class="footer__logo logo" href="#">
+        <picture>
+          <img class="footer__logo-img" src="images/logo-text.svg" width="128" height="24" alt="Cat Energy">
+        </picture>
+      </a>
       <ul class="footer__social social">
         <li class="social__item">
-          <a class="social__link social__link--vk" href="#">
+          <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">ВКонтакте</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--yt" href="#">
+          <a class="social__link social__link--yt" href="https://www.youtube.com/@HTMLAcademyTV">
             <span class="visually-hidden">YouTube</span>
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link social__link--tg" href="#">
+          <a class="social__link social__link--tg" href="https://htmlacademy.t.me/">
             <span class="visually-hidden">Телеграм</span>
           </a>
         </li>
